installdir = $(libdir)/enigma2/python/Plugins/SkinComponents/Metrix
rendererinstalldir = $(libdir)/enigma2/python/Components/Renderer
converterinstalldir = $(libdir)/enigma2/python/Components/Converter
rendererinstall_PYTHON = NextEvent.py VReference.py VVolumeText.py XPicon.py XPiconChannel.py
converterinstall_PYTHON = ClockToTextMod.py EventNameMod.py MetrixCombinedEventName.py MetrixRefString.py MetrixWeather.py RemainingToTextMod.py vhdConvEventName.py
