installdir = $(libdir)/enigma2/python/Plugins/SkinComponents/Novum
install_DATA = README
rendererinstalldir = $(libdir)/enigma2/python/Components/Renderer
rendererinstall_PYTHON = NovSingleEpgListNobile.py
converterinstalldir = $(libdir)/enigma2/python/Components/Converter
converterinstall_PYTHON = NovumEventsInfo.py
